--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -69,7 +69,7 @@
                         @{ var user = (NubeBooks.Core.DTO.UsuarioDTO)HttpContext.Current.Session["User"]; }
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
                             <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-                                <img src="~/Content/themes/admin-nb/img/c1_b.png" alt="...">
+                                <img src="~/Content/themes/admin-nb/img/b18.jpg" alt="...">
                             </span>
                             @user.Nombre &nbsp;<span class="hidden-sm hidden-md"></span><b class="caret"></b>
                         </a>
