--- a/NubeBooks/Views/Admin/Comprobante.cshtml
+++ b/NubeBooks/Views/Admin/Comprobante.cshtml
@@ -21,6 +21,7 @@
         var jUserExt = '@ViewBag.EsUsuarioExterno';
 
         $(function () {
+            $('.input-group.date').datepicker();
             $('.miselect2').select2();
 
             $('#IdCategoria').select2({
@@ -274,11 +275,9 @@
                     <div class="row">
                         <div class="col-md-3">
                             <label class="control-label">@strFechaIni</label>
-                            <div class="input-group">
-                                @Html.TextBoxFor(u => u.FechaEmision, "{0:dd/MM/yyyy}", new { @class = "datepicker-input form-control rol-accs", @placeholder = "Fecha", @type = "text", @data_provide = "datepicker", @readonly = "true" })
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                                </span>
+                            <div class="input-group date">
+                                @Html.TextBoxFor(u => u.FechaEmision, "{0:dd/MM/yyyy}", new { @class = "form-control rol-accs", @placeholder = "Fecha", @type = "text", @readonly = "true" })
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 @Html.ValidationMessageFor(u => u.FechaEmision)
                             </div>
                         </div>
@@ -294,11 +293,9 @@
                         </div>
                         <div class="col-md-3">
                             <label>Fecha de @strFechaFin</label>
-                            <div class="input-group">
-                                @Html.TextBoxFor(u => u.FechaConclusion, "{0:dd/MM/yyyy}", new { @class = "datepicker-input form-control rol-accs", @placeholder = "Fecha de cancelación", @type = "text", @data_provide = "datepicker", @readonly = "true" })
-                                <span class="input-group-btn">
-                                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                                </span>
+                            <div class="input-group date">
+                                @Html.TextBoxFor(u => u.FechaConclusion, "{0:dd/MM/yyyy}", new { @class = "form-control rol-accs", @placeholder = "Fecha de cancelación", @type = "text", @readonly = "true" })
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 @Html.ValidationMessageFor(u => u.FechaConclusion)
                             </div>
                         </div>
