--- a/NubeBooks/Views/Admin/Item.cshtml
+++ b/NubeBooks/Views/Admin/Item.cshtml
@@ -38,7 +38,7 @@ else { cadena = "Actualizar"; }
                     <div class="row">
                         <div class="col-md-6">
                             <label>Nombre</label>
-                            @Html.TextBoxFor(u => u.Nombre, new { @class = "form-control", @placeholder = "Nombre", @type = "text" })
+                            @Html.TextBoxFor(u => u.Nombre, new { @class = "form-control", @placeholder = "Nombre", @type = "text", autofocus = "" })
                             @Html.ValidationMessageFor(u => u.Nombre)
                         </div>
                         <div class="col-md-6">
