--- a/NubeBooks/Views/Admin/Ubicacion.cshtml
+++ b/NubeBooks/Views/Admin/Ubicacion.cshtml
@@ -19,7 +19,7 @@ else { cadena = "Actualizar"; }
                 @Html.ValidationSummary(true)
                 <div class="form-group">
                     <label>Nombre de la Ubicación</label>
-                    @Html.TextBoxFor(u => u.Nombre, new { @class = "form-control", @placeholder = "Ingrese la ubicación", @type = "text" })
+                    @Html.TextBoxFor(u => u.Nombre, new { @class = "form-control", @placeholder = "Ingrese la ubicación", @type = "text", autofocus = "" })
                     @Html.ValidationMessageFor(u => u.Nombre)
                 </div>
                 <div class="line line-dashed b-b line-lg pull-in"></div>
