--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -108,12 +108,47 @@
                             </li>
                             @if (!ViewBag.EsUsuarioInterno)
                             {
+                                @*<li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
+                                    <span>Reportes</span>
+                                </li>*@
                                 <li class="@ViewBag.navbar.lstOptions[1].cadena">
+                                    <a href="@Url.Action("ReportesPresupuestos", "Admin")" class="auto">
+                                        <span class="pull-right text-muted">
+                                            <i class="fa fa-fw fa-angle-right text"></i>
+                                            <i class="fa fa-fw fa-angle-down text-active"></i>
+                                        </span>
+                                        <i class="fa fa-download"></i>
+                                        <span class="font-bold">Reportes</span>
+                                    </a>
+                                    <ul class="nav nav-sub dk">
+                                        <li class="nav-sub-header">
+                                            <a href="@Url.Action("ReportesPresupuestos", "Admin")">
+                                                <span>Reportes de Presupuestos</span>
+                                            </a>
+                                        </li>
+                                        <li class="@ViewBag.navbar.lstOptions[1].lstOptions[0].cadena">
+                                            <a href="@Url.Action("ReportesPresupuestos", "Admin")">
+                                                <span>Reportes de Presupuestos</span>
+                                            </a>
+                                        </li>
+                                        <li class="@ViewBag.navbar.lstOptions[1].lstOptions[1].cadena">
+                                            <a href="@Url.Action("ReportesGestion", "Admin")">
+                                                <span>Reportes de Gestión </span>
+                                            </a>
+                                        </li>
+                                        <li class="@ViewBag.navbar.lstOptions[1].lstOptions[2].cadena">
+                                            <a href="@Url.Action("ReportesInventarios", "Admin")">
+                                                <span>Reportes de Inventarios</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                @*<li class="@ViewBag.navbar.lstOptions[1].cadena">
                                     <a href="@Url.Action("ReporteCategorias", "Admin")">
                                         <i class="fa fa-download"></i>
                                         <span class="font-bold">Reportes</span>
                                     </a>
-                                </li>
+                                </li>*@
                             }
                             <li class="line dk"></li>
 
