avance correciones antes dle viajes

--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -123,22 +123,22 @@
                                     <ul class="nav nav-sub dk">
                                         <li class="nav-sub-header">
                                             <a href="@Url.Action("ReportesPresupuestos", "Admin")">
-                                                <span>Reportes de Presupuestos</span>
+                                                <span>Presupuestos</span>
                                             </a>
                                         </li>
                                         <li class="@ViewBag.navbar.lstOptions[1].lstOptions[0].cadena">
                                             <a href="@Url.Action("ReportesPresupuestos", "Admin")">
-                                                <span>Reportes de Presupuestos</span>
+                                                <span>Presupuestos</span>
                                             </a>
                                         </li>
                                         <li class="@ViewBag.navbar.lstOptions[1].lstOptions[1].cadena">
                                             <a href="@Url.Action("ReportesGestion", "Admin")">
-                                                <span>Reportes de Gestión </span>
+                                                <span>Gestión </span>
                                             </a>
                                         </li>
                                         <li class="@ViewBag.navbar.lstOptions[1].lstOptions[2].cadena">
                                             <a href="@Url.Action("ReportesInventarios", "Admin")">
-                                                <span>Reportes de Inventarios</span>
+                                                <span>Inventarios</span>
                                             </a>
                                         </li>
                                     </ul>
